[package]
name = "gtfs-rt-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "*"
csv = "1"
gtfs-rt = {git = "https://github.com/lolpro11/gtfs-rt"}
prost = "0.12"
rand = "0.8.5"
reqwest = {version = "0.11", default-features = false, features = ["gzip","brotli","rustls-tls","deflate"]}
serde = "1"
serde_derive = "1"
tokio = { version = "1.36.0", features = ["full"] }
